src/index.css
@import '../node_modules/bulma/css/bulma.min.css';
@import '../node_modules/highlight.js/styles/railscasts.css';
@import '../node_modules/@fortawesome/fontawesome-free/css/all.min.css';

.light {
  --bg-1: white;
  --bg-2: whitesmoke;
  --bg-3: #fafafa;
  --text-primary: #363636;
  --text-secondary: #686b74;
  --icons: #2f3135;
}

.dark {
  --bg-1: #161c21;
  --bg-2: #232933;
  --bg-3: #323943;
  --text-primary: #fefefe;
  --text-secondary: #7f828d;
  --icons: #80838d;
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  user-select: none;
  background: var(--bg-1);

  height: 100vh;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
  user-select: text;
}

* {
  transition: all 0.2s cubic-bezier(0.5, 0.1, 0.75, 1.35);
}

pre {
  padding: 10px 12px;
}
.codebox {
  background: var(--bg-2);
}
.copy-container {
  position: relative;
}
.copy-icon {
  position: absolute;
  top: 0px;
  right: 0px;
  padding: 5px;
  border-radius: 5px;
}

.copy-icon:hover {
  background: rgba(0, 0, 0, 0.1);
}

.copy-icon:active {
  background: rgba(0, 0, 0, 0.2);
}

.copy-success-icon {
  color: hsl(141, 53%, 53%);
  position: absolute;
  top: 0px;
  right: 24px;
  padding: 5px;
  border-radius: 5px;
}

.hljs {
  background: transparent;
  text-align: left;
  color: #4a4a4a;
}

.stringmod {
  text-align: center;
}

.title-bar {
  -webkit-app-region: drag;
  height: 28px;
  width: 100vw;
  background: var(--bg-2);
  text-align: center;
  user-select: none;

  display: flex;
}

.window-title {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;

  height: 28px;
  width: 100px;

  margin: 0 auto;
}

.title-bar-buttons {
  -webkit-app-region: no-drag;
  display: flex;
}

.title-bar-buttons > span {
  display: flex;
  align-items: center;

  width: 28px;

  transition: all 0.2s cubic-bezier(0.5, 0.1, 0.75, 1.35);

  z-index: 9999;
}

.title-bar-buttons > span:hover {
  background: rgba(0, 0, 0, 0.2);
}

.title-bar-buttons > span:active {
  background: rgba(0, 0, 0, 0.3);
}

.title-bar-buttons > span > i {
  margin: auto;
}

.spacer {
  flex-grow: 1;
}

#close-button:hover {
  background: #e81123;
}
#close-button:active {
  background: #982336;
}

#theme-button:hover,
#about-button:hover {
  cursor: pointer;
}

::-webkit-scrollbar {
  display: none;
}

.visible {
  visibility: visible;
  opacity: 1;
}

.hidden {
  visibility: hidden;
  opacity: 0;
  transition: visibility 0s 1s, opacity 1s linear;
}

input,
* {
  color: var(--text-primary);
}

.input,
.select select,
.dropdown button,
.dropdown-content,
.textarea {
  background-color: var(--bg-2);
  border-radius: 4px;
  color: var(--text-primary);
}

.dark .input,
.dark .select select,
.dark .dropdown button,
.dark .dropdown-content,
.dark .textarea {
  border-color: var(--bg-2);
}

.input::placeholder,
.select select::placeholder,
.dropdown::placeholder,
.textarea::placeholder {
  color: var(--text-secondary);
}

.dropdown-content > a {
  color: var(--text-secondary);
}

.dropdown-content > a:hover {
  background: var(--bg-3);
  color: var(--text-primary);
}

i {
  color: var(--icons);
}

pre,
code,
.hljs {
  color: var(--text-secondary);
  background: var(--bg-2);
}

.modal-card-foot,
.modal-card-head,
.modal-card-title {
  background-color: var(--bg-1);
  color: var(--text-primary);
}

.modal-card-head {
  border-bottom: 2px solid #0002;
}

.modal-card-foot {
  border-top: 2px solid #0002;
}

.modal-card-body {
  background-color: var(--bg-1);
  color: var(--text-secondary);
}

